postmortem: fix display problems in EXPLORER (1) position table width problem (svg with 100% did not work, had to set explicit width) (2) draft viz was over flowing div, had to set overflow-x:hidden

--- a/projects/ff_2013_postmortem/webfiles/style.css
+++ b/projects/ff_2013_postmortem/webfiles/style.css
@@ -3,11 +3,14 @@
 	margin: 0px auto;
 }
 
-#position_table{
+#postable_div{
 	width: 60%;
 	margin: 0px auto;
 }
 
+#draft_viz{
+  overflow-x: hidden;
+}
 .posbar {
   fill: rgb(0,120,240);
 }
